--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TRSultaN Notlar Sayfası</title>
-  <link rel="stylesheet" href="style.css"> <!-- ✅ BURASI -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>🟥 TRSultaN Notlar Sayfası 🖤</h1>
+    <input type="text" id="search" placeholder="Notlarda ara..." />
   </header>
 
-  <aside class="menu">
-    <button id="menu-toggle">☰ Menü</button>
-    <div class="menu-items">
-      <button class="menu-btn" data-section="notes">📒 Notlar</button>
-      <button class="menu-btn" data-section="archive">🗂️ Arşiv</button>
-      <button class="menu-btn" data-section="trash">🗑️ Çöp Kutusu</button>
+  <div class="container">
+    <div class="add-note">
+      <input type="text" id="note-title" placeholder="Başlık..." />
+      <textarea id="note-content" placeholder="Not içeriği..."></textarea>
+      <div class="controls">
+        <input type="color" id="note-color" value="#ff3b3b" />
+        <button id="add-note-btn">Not Ekle</button>
+      </div>
     </div>
-  </aside>
 
-  <main>
-    <section id="add-note">
-      <input type="text" id="note-title" placeholder="Not başlığı...">
-      <textarea id="note-content" placeholder="Bir şeyler yaz..."></textarea>
-      <button id="add-btn">➕ Not Ekle</button>
-    </section>
+    <div id="notes-container"></div>
+  </div>
 
-    <section id="notes-section" class="grid"></section>
-    <section id="archive-section" class="grid hidden"></section>
-    <section id="trash-section" class="grid hidden"></section>
-  </main>
+  <div class="menu">
+    <button id="menu-toggle">☰</button>
+    <div class="menu-content">
+      <button class="menu-btn" id="all-notes">📝 Notlar</button>
+      <button class="menu-btn" id="pinned-notes">📌 Sabitlenenler</button>
+      <button class="menu-btn" id="archived-notes">📦 Arşiv</button>
+      <button class="menu-btn" id="trash-notes">🗑️ Çöp Kutusu</button>
+    </div>
+  </div>
 
-  <!-- ✅ JS dosyasını doğru şekilde bağla -->
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
