--- a/notes.html
+++ b/notes.html
@@ -14,7 +14,7 @@
         <!-- Sidebar Menu -->
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <h2>Not Menüsü</h2>
+                <h2>Menü</h2>
                 <button class="close-sidebar" id="closeSidebar">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <line x1="18" y1="6" x2="6" y2="18"></line>
@@ -44,32 +44,49 @@
                     </span>
                     <span class="nav-text">Not Tutma</span>
                 </a>
-                <a href="#archive" class="nav-item" data-view="archive">
+                <a href="lists.html" class="nav-item">
                     <span class="nav-icon">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="21 8 21 21 3 21 3 8"></polyline>
-                            <rect x="1" y="3" width="22" height="5"></rect>
-                            <line x1="10" y1="12" x2="14" y2="12"></line>
+                            <line x1="8" y1="6" x2="21" y2="6"></line>
+                            <line x1="8" y1="12" x2="21" y2="12"></line>
+                            <line x1="8" y1="18" x2="21" y2="18"></line>
+                            <line x1="3" y1="6" x2="3.01" y2="6"></line>
+                            <line x1="3" y1="12" x2="3.01" y2="12"></line>
+                            <line x1="3" y1="18" x2="3.01" y2="18"></line>
                         </svg>
                     </span>
-                    <span class="nav-text">Arşiv</span>
-                </a>
-                <a href="#trash" class="nav-item" data-view="trash">
-                    <span class="nav-icon">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="3 6 5 6 21 6"></polyline>
-                            <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                            <line x1="10" y1="11" x2="10" y2="17"></line>
-                            <line x1="14" y1="11" x2="14" y2="17"></line>
-                        </svg>
-                    </span>
-                    <span class="nav-text">Çöp Kutusu</span>
+                    <span class="nav-text">Listeleme</span>
                 </a>
             </nav>
         </aside>
 
         <!-- Overlay -->
         <div class="sidebar-overlay" id="sidebarOverlay"></div>
+
+        <!-- Bottom Slide Menu for Notes -->
+        <div class="bottom-slide-menu" id="notesBottomMenu">
+            <button class="bottom-menu-toggle" id="notesMenuToggle">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                    <polyline points="14 2 14 8 20 8"></polyline>
+                </svg>
+                <span>Not Menüsü</span>
+            </button>
+            <div class="bottom-menu-content" id="notesMenuContent">
+                <a href="#" class="bottom-menu-item active" data-view="notes">
+                    <span class="menu-item-icon">📝</span>
+                    <span>Notlarım</span>
+                </a>
+                <a href="#" class="bottom-menu-item" data-view="archive">
+                    <span class="menu-item-icon">🗄️</span>
+                    <span>Arşiv</span>
+                </a>
+                <a href="#" class="bottom-menu-item" data-view="trash">
+                    <span class="menu-item-icon">🗑️</span>
+                    <span>Çöp Kutusu</span>
+                </a>
+            </div>
+        </div>
 
         <header class="dashboard-header">
             <div class="header-content">
